--- a/styles/global.css
+++ b/styles/global.css
@@ -3,3 +3,22 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+:root {
+  /*Product*/
+  --brand-color: #ef5f4c;
+  /*Shape*/
+  --background-color: #fff;
+  --surface-color: #f5f5f5;
+  --skeleton-color: #d9d9d9;
+  --shape-transparency: #ffffff8f;
+  /*Text*/
+  font-size: 62.5%;
+  --font-family: "Poppins", sans-serif;
+  --text-color-primary: #313131;
+  --text-color-secondary: #6c6c6c;
+  --text-lg: 3.2rem bold var(--font-family) / 1.15;
+  --text-md: 1.4rem var(--font-family) / 1.7;
+  --text-sm: 1.2rem var(--font-family) / 1.7;
+  --text: 1.6rem var(--font-family) / 1.5;
+}
