--- a/styles/global.css
+++ b/styles/global.css
@@ -28,3 +28,23 @@ body {
   color: var(--text-color-secondary);
   font: var(--text);
 }
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+a:hover {
+  color: var(--brand-color);
+  text-decoration: underline;
+}
+
+.container {
+  padding-inline: 3.2rem;
+  max-width: 128rem;
+  margin-inline: auto;
+}
+
+.bg-surface-color {
+  background-color: var(--surface-color);
+}
